# toubib

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  setup.cfg
tests/: conftest.py
tests/integration/: test_create_doctor.py  test_create_patient.py  test_get_doctor copy.py  test_get_doctor.py  test_get_health.py  test_get_patient.py  test_get_patients.py
tests/unittests/: test_sqla_doctor.py  test_sqla_patient.py
toubib/: main.py  sqla.py
toubib/db/: env.py
toubib/db/versions/: 001_add_doctor_table.py  002_add_patient_table.py
